# QQPilot

./: .gitignore  1.xaml  FocusQQWindow2.slnx  GUIOperation.py  GUIOperationLinux.py  GUIOperations2.py  GUIOperations3.py  ImageImport.py  ImageImport.sh  LUpgrade.py  LUpgrade.sh  Option4.py  Option5.py  ScreenshotToUILayout.py  TinyLangJaccard.py  _easyocr.py  _paddleocr.py  answer.py  answerAsExtension.py  chatContent.py  compressDatasetSqlite.py  config.ini  conversationImages.py  conversationStyleExtract.py  dbconnect.py  dockLog.py  extensionAPIs.py  extensionLoader.py  extensionViewer.py  focus.py  focus.sh  image.py  imageLinux.py  imageWin.py  left.sh  load.py  main.xaml  menu.py  menu.sh  messageBoxLinux.py  (+23 more)
.github/workflows/: release.yaml
Extensions/: AutoSummary.py  sB.py
Extensions/template/: ExtensionTemplate.py
Extensions/test/: errorTest.py  lackTest.py
FocusQQWindow2/: FocusQQWindow2.vcxproj  dllmain.cpp
Opt/: Form1.Designer.cs  Form1.cs  config.ini  readme.md
ScaleToINI/: ScaleToINI.vcxproj
VisionQQ_C/: VisionQQ_C.slnx  readme.md
VisionQQ_C#/: VisionQQ_C#.slnx  readme.md
VisionQQ_C#/Opt/: Form1.Designer.cs  Form1.cs  Opt.csproj  splash.Designer.cs  splash.resx
VisionQQ_C#/update/: Form1.Designer.cs  Form1.cs  Form1.resx  readme.md  splash.cs  update.csproj
VisionQQ_C/CreateLNK/: createLNK.c  createLinkAfterInstallation.c
VisionQQ_C/FocusQQWindow2/: CMakeLists.txt  FocusQQWindow2.vcxproj  FocusQQWindow2.vcxproj.filters  dllmain.cpp  pch.h  readme.md
VisionQQ_C/ImageImport/: ImageImport.aps  ImageImport.cpp  ImageImport.h  ImageImport.rc  ImageImport.vcxproj  ImageImport.vcxproj.filters  ImageImportDlg.cpp  ImageImportDlg.h  findTencentFiles.cpp  findTencentFiles.h  findfiles.hpp  pch.h  resource.h
VisionQQ_C/InputEvent/: CMakeLists.txt  InputEvent.slnx  InputEvent.vcxproj  InputEvent.vcxproj.filters  dllmain.cpp  keyboardevent.hpp  mouseEvent.hpp  pch.h
VisionQQ_C/MFCInstall/: MFCInstall.cpp  MFCInstall.h  MFCInstall.rc  MFCInstall.vcxproj  MFCInstall.vcxproj.filters  MFCInstallDoc.cpp  MFCInstallDoc.h  MFCInstallView.cpp  MFCInstallView.h  MainFrm.cpp  Resource.h
VisionQQ_C/MFCLauncher/: MFCLauncher.aps  MFCLauncher.cpp  MFCLauncher.h  MFCLauncher.rc  MFCLauncher.vcxproj  MFCLauncher.vcxproj.filters  MFCLauncherDlg.cpp  MFCLauncherDlg.h  pch.h  resource.h
VisionQQ_C/MFCUpdate/: MFCUpdate.cpp  MFCUpdate.h  MFCUpdate.rc  MFCUpdate.vcxproj  MFCUpdate.vcxproj.filters  MFCUpdateDlg.cpp  MFCUpdateDlg.h  config.ini  pch.h  resource.h
VisionQQ_C/ScaleToINI/: CMakeLists.txt  ScaleToINI.vcxproj  inicpp.hpp  readme.md
VisionQQ_C/Vimage/: CImg.7z  CMakeLists.txt  Point.hpp  Vimage.slnx  Vimage.vcxproj  Vimage.vcxproj.filters  dllmain.cpp  dllmain.h  pch.h  positions.h  readme.md  rgb.h  vimage.h
VisionQQ_C/batWrapperARM64/: batWrapperARM64.c  batWrapperARM64.vcxproj  batWrapperARM64.vcxproj.filters
VisionQQ_C/batwrapper/: OllamainVM.c  OllamainVM.cmd  basic.c  convert.py  convertCl.py  install.c  install.cmd  installx64.cmd  readme.md  run.c  run.cmd  下载助手.bat  下载助手.c  启动QPilot.bat  启动QPilot.c  扩展管理器.c  扩展管理器.cmd  设置.bat  设置.c
VisionQQ_C/fbps/: install.fbp  option2.fbp  qpilotupdate.fbp  readme.md
VisionQQ_C/mfcinstall2/: mfcinstall2.aps  mfcinstall2.cpp  mfcinstall2.h  mfcinstall2.rc  mfcinstall2.vcxproj  mfcinstall2.vcxproj.filters  mfcinstall2Dlg.cpp  mfcinstall2Dlg.h  resource.h
VisionQQ_C/readFileC/: dllmain.cpp  getSystemC.h  readFileC.slnx  readFileC.vcxproj  readFileC.vcxproj.filters
VisionQQ_C/update2/: MyProjectBase.h  ui.cpp  (+10 more)
VisionQQ_C/uploadFile/: CMakeLists.txt  readme.md
VisionQQ_C/wxOption/: CMakeLists.txt  MyProjectBase.h  Resource.h  config.ini  getSystemC.h  inicpp.hpp  iniparser2.h  readFileC.c  readFileC.lib  readFileTest.cpp  ui.cpp  wxInstall.cpp  wxInstall.rc  wxInstall.vcxproj.filters  wxoption.slnx  wxoption.vcxproj
assets/: Extension.ico~
download/: Form1.Designer.cs  Form1.cs  Form1.resx  HighDPIPrologue.py  Program.cs  download.csproj  download.py  download.slnx  index.json  readme.md  splash.Designer.cs  splash.resx
installOnLinux/: installonLinux.md  uv-installer2.sh
update/: Program.cs  readme.md  splash.resx  update.csproj  update.slnx
uploadFile/: dllmain.cpp  pch.h  uploadFile.slnx  uploadFile.vcxproj
useollamainVM/: useOllamainVM.html  useOllamainVM.md
(+50 files in other folders)
